Map multiple displays inside GuidanceSign to DTO's